--- a/Piscine/assets/css/style.css
+++ b/Piscine/assets/css/style.css
@@ -43,6 +43,26 @@ header h1 {
     font-size: 20px;
 }
 
+h2 {
+    display: block;
+    margin: 0 auto;
+    font-size: 16px;
+    background-color: #333;
+    color: #fff;
+    padding: 6px 18px;
+    border-radius: 4px;
+    width: fit-content;
+    text-align: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+    align-items: center;
+    width: fit-content;
+}
+
 main {
     padding: 2rem;
     background: white;
