--- a/Piscine/assets/css/style.css
+++ b/Piscine/assets/css/style.css
@@ -236,7 +236,7 @@ footer {
     font-size: 0.9em;
     color: #555;
 }
-.actions , .post button {
+.actions button , .post button {
     margin-left: 10px;
     padding: 8px 12px;
     border: none;
